samples/_failures_safe/1761661430_dd3a47_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2548ef23.c: In function ‘main’:
./samples/SAFE/__tmp_2548ef23.c:155:64: error: expected ‘)’ at end of input
  155 |                 int status = add_matrices(&mat1, &mat2, &result
      |                                          ~                     ^
      |                                                                )
./samples/SAFE/__tmp_2548ef23.c:155:17: error: expected declaration or statement at end of input
  155 |                 int status = add_matrices(&mat1, &mat2, &result
      |                 ^~~
./samples/SAFE/__tmp_2548ef23.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2548ef23.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2548ef23.c:155:17: error: expected declaration or statement at end of input
